# handcraft

./: README.md  handcraft.cabal  handcraft.txt  stack.yaml
app/: Main.hs
app/Web/: Html.hs  Html_stage1.hs  JSON.hs  entityref.sgml
