name:                handcraft
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/quickdudley/handcraft#readme
license:             BSD3
license-file:        LICENSE
author:              Jeremy List
maintainer:          quick.dudley@gmail.com
copyright:           BSD3
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

executable handcraft
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base, stm, template-haskell,
    resourcet,
    http-client,
    http-conduit,
    conduit,
    phaser == 1.0.0.0
  default-language:    Haskell2010

test-suite handcraft-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , handcraft
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/quickdudley/handcraft
